[metadata]
name = pan-iot-security-python
version = attr: paniot.__version__
author = Palo Alto Networks, Inc.
author_email = devrel@paloaltonetworks.com
description = Python interface to the Palo Alto Networks IoT Security API
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/PaloAltoNetworks/pan-iot-security-python
license = ISC
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: ISC License (ISCL)

[options]
packages = paniot
scripts =
    bin/iotapi.py
install_requires =
    aiohttp>=3.8.1
    requests>=2.27.1
python_requires = >=3.8
